# email-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml
.dvc/: config
config/: config.yaml
config/data/: default.yaml
config/infer/: default.yaml
config/model/: default.yaml
config/summarization/: default.yaml
config/training/: default.yaml
data/: .gitignore  emails.jsonl.dvc  test.csv.dvc  test.txt  train.csv.dvc
prompts/: summarization_prompt.txt
src/email_assistant/: data.py  dvc_handler.py  infer.py  logging_utils.py  model.py  split_data.py  summarize.py  train.py  trainer.py
